--- a/grid/grid-layout-2/style.css
+++ b/grid/grid-layout-2/style.css
@@ -5,6 +5,14 @@
 
 .container {
   text-align: center;
+  display: grid;
+  gap: 4px;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: auto;
+  grid-template-areas: 'header header'
+                       'sidebar nav'
+                       'sidebar article'
+                       'footer footer'; 
 }
 
 .container div {
@@ -13,19 +21,45 @@
   font-family: Helvetica;
   font-weight: bold;
   color: white;
+ 
 }
 
 .header {
   background-color: #393f4d;
+  grid-area: header;
+
+  display: grid;
+  grid-template-columns: 1fr 2fr;   /*sub-grid*/
+}
+
+.logo{
+  display: grid;
+  justify-items: start;
+}
+
+.menu{
+  display: grid;
+  align-items: center;
+}
+
+.menu ul{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .menu ul,
 .menu li {
   font-size: 16px;
+  list-style: none;
 }
 
 .sidebar {
   background-color: #FF7755;
+  grid-area: sidebar;
+
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 50px;
 }
 
 .sidebar .photo {
@@ -44,17 +78,34 @@
   font-weight: normal;
 }
 
+.side-content, .photo{
+  display: grid;
+  align-items: center;
+}
+
 .nav {
   background-color: #FF7755;
+  grid-area: nav;
 }
 
 .nav ul li {
   font-size: 16px;
   text-transform: uppercase;
+  list-style: none;
+}
+
+.nav ul{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 .article {
   background-color: #bccbde;
+  grid-area: article;
+
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
+  gap: 15px;
 }
 
 .article p {
@@ -68,6 +119,7 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
@@ -83,6 +135,7 @@
 
 .footer {
   background-color: #393f4d;
+  grid-area: footer;
 }
 
 .footer p {
